--- a/css/main_style.scss
+++ b/css/main_style.scss
@@ -326,7 +326,7 @@ footer {
 
             .col {
                 img {
-                    width: 80vw;
+                    width: 100%;
                 }
             }
         }
@@ -334,6 +334,5 @@ footer {
 
     .img-main-bgi {
         background-size: contain;
-        background-position-y: 107%;
     }
 }
