--- a/css/Neiw_style.scss
+++ b/css/Neiw_style.scss
@@ -52,7 +52,7 @@ monospace;
   min-height: 100vh;
   padding-top: 9.26vh;
   padding-bottom: 9.26vh;
-  
+
 
 
   .col::before {
@@ -154,149 +154,71 @@ monospace;
 
 // 待調整
 @media (max-width: 320px) {
-  body {
-    font-size: 12px;
-  }
-
-  .section1 {
-    padding: 10% 0 15% 0;
-  }
-
-  .section2 {
-    padding: 0 0 15% 0;
-
-    .text-main-Neiw-cotent {
-      margin-top: 10%;
-
-      p {
-        margin-bottom: 0;
-      }
-    }
-  }
-
+  //第三段合興
   .section3 {
-    padding: 0;
-
-    .img-Neiw-hex01 {
-      width: 320px;
-
-      .container {
-        padding: 0;
-
-        .Neiw-hex-title {
-          margin: 0;
-
-          .col-4 {
-            max-width: unset;
-          }
-
-          .mini1 {
-            width: 451px;
-            height: 81px;
-            // transform: scale(0.34, 0.34);
-            display: flex;
-            align-items: flex-end;
-
-            .img1 {
-              margin-bottom: 0;
-              width: 34%;
-            }
-          }
-
-          .mini2 {
-            width: 151px;
-            height: 81px;
-          }
-
-          .img2 {
-            width: 60%;
-            margin-top: 5%;
-          }
-        }
-      }
+    .mini {
+      width: 100%;
     }
 
-    .container {
-      padding: 0;
-
-      .text-Neiw-hex01 {
-        margin-top: 5%;
-
-        p {
-          margin-bottom: 0;
-        }
-      }
+    .row:nth-child(3) {
+      margin-top: 105vh;
     }
   }
 
   .section4 {
-    padding: 15% 0 0 0;
+    padding: 15% 0;
+    display: flex;
+    align-items: center;
+
+    img {
+      width: 100%;
+    }
   }
 
   .section5 {
-    min-height: 100vh;
-    padding: 0 0 15% 0;
-    text-align: left;
+    padding-top: 0;
+    padding-bottom: 100vh;
 
-    .mini1 {
-      width: 351px;
-      height: 106px;
+    .mini {
+      width: 90%;
+    }
+
+    .col-lg-4 {
       display: flex;
-      align-items: flex-end;
+      justify-content: center;
     }
 
-    .img1 {
-      width: 34%;
-      margin-bottom: 5%;
+    .col-lg-4>div:nth-child(2) {
+      margin-top: 1.71vh;
     }
 
-    .mini2 {
-      width: 351px;
-      height: 106px;
-    }
-
-    .img2 {
-      margin-top: 0;
-      width: 34%;
+    .padding_top {
+      padding-top: 2vh;
     }
 
     // 6欄位內文
-    .text-Neiw-cjcu01 {
-      letter-spacing: 6px;
-      line-height: 1.6em;
-    }
-
     p {
-      margin-bottom: 0;
-    }
-
-    .img2 {
-      margin: 5% 0 0 0;
+      letter-spacing: 0.1rem;
+      line-height: 1.15rem;
+      padding: 2vh 0 7vh 0;
     }
   }
 
   .section6 {
-    .row {
-      padding-bottom: 5%;
+    .rounded-lg {
+      width: 90%;
+    }
 
-      .mini {
-        width: 446px;
-        height: 421px;
-      }
-
-      .img {
-        width: 34%;
-      }
-
-      // 6欄位內文
-      .text-Neiw-firefly01 {
-        letter-spacing: 6px;
-        line-height: 1.6em;
+    .row:nth-child(1) {
+      p {
+        letter-spacing: 0.4rem;
+        line-height: 1.15rem;
+        padding-top: 4.8vh;
       }
     }
 
-    p {
-      margin-bottom: 0;
+    .row:nth-child(2) {
+      margin-top: 4.8vh;
     }
   }
 
@@ -304,49 +226,8 @@ monospace;
     min-height: unset;
     padding: 15% 0;
 
-    .mini1 {
-      width: 351px;
-      height: 106px;
-      display: flex;
-      align-items: flex-end;
-    }
-
-    .col-2 {
-      padding: 0;
-    }
-
-    .img1 {
-      margin-bottom: 5%;
-      width: 34%;
-    }
-
-    .mini2 {
-      width: 351px;
-      height: 106px;
-      display: flex;
-      align-items: flex-start;
-
-      img {
-        margin-bottom: 5%;
-        width: 34%;
-      }
-    }
-
-    .img2 {
-      width: 320px;
-    }
-
-    .col-2 {
-      width: 0 !important;
-      height: 0;
-    }
-
-    .col {
-      padding: 0;
-    }
-
-    p {
-      padding-left: 30px;
+    .rounded-lg {
+      width: 100%;
     }
   }
 
@@ -370,7 +251,4 @@ monospace;
     }
   }
 
-  .section9 {
-    padding: 5% 0 10% 0;
-  }
 }
