--- a/css/main_style.css
+++ b/css/main_style.css
@@ -245,11 +245,10 @@ footer div p {
     margin-top: 5%;
   }
   .section2 .row:nth-child(4) .col img {
-    width: 80vw;
+    width: 100%;
   }
   .img-main-bgi {
     background-size: contain;
-    background-position-y: 107%;
   }
 }
 /*# sourceMappingURL=main_style.css.map */
