--- a/css/main_style.scss
+++ b/css/main_style.scss
@@ -157,6 +157,7 @@ span {
 
 .nextTrip {
     padding: 13.89vh 0 9.26vh 0;
+    overflow: hidden;
 
     .img-main-btn img {
         border-radius: 21px;
